add js_study files

--- a/js/explanation/explanation.html
+++ b/js/explanation/explanation.html
@@ -2,11 +2,17 @@
 <html lang="utf-8">
 <head>
 	<title>Explaining the Document Object Model</title>
+	<link rel="stylesheet" media="screen" type="text/css" href="typegraphy.css">
 </head>
 <body>
+	<ul id="navigation">
+		<li><a href="index.html" accesskey="1">Home</a></li>
+		<li><a href="search.html" accesskey="4">Search</a></li>
+		<li><a href="contact.html" accesskey="9">Contact</a></li>
+	</ul>
 	<h1>What is the Document Object Model?</h1>
 	<p>
-		The<abbr title="World Wide Web Consortium">W3C</abbr> defines the <abbr title="Document Object Model"></abbr> as:
+		The<abbr title="World Wide Web Consortium"> W3C</abbr> defines the <abbr title="Document Object Model"> DOM</abbr> as:
 	</p>
 	<blockquote cite="http://www.w3.org/DOM/">
 		<p>
@@ -15,7 +21,12 @@
 	</blockquote>
 	<p>
 		It is an <abbr title="Appliction Programing Interface">API</abbr>
-		that can be used to navigate<abbr title="Extensible Markup Languages">XML</abbr>document.
+		that can be used to navigate<abbr title="Extensible Markup Languages"> XML</abbr> document.
 	</p>
+	<script src="addLoadEvent.js"></script>
+	<script src="displayAbbreviations.js"></script>
+	<script src="displayCitations.js"></script>
+	<script src="displayAccesskeys.js"></script>
+
 </body>
 </html>
